# PyPREVENT

./: Cargo.toml  README.md  __init__.py  pyproject.toml  setup.py
.github/workflows/: CI.yml  build-wheels.sh  windows_build.yml
.hypothesis/examples/3d3d983cff1aeceb/: 1e62fb5aa58f923e
.hypothesis/examples/706993f52ed7d445/: 26d9d7009e699c32
.hypothesis/examples/749388d17b6e0309/: 00b38fecaf66efb8  0481c6832a27e0d7  04a2fb61aa319c6d  04dbb197fa2fa335  061bdfd9a4adcc99  067e6ae0423df64a  06a089eca2394bc4  070ce0587a8da80f  0a8f67fb0181af84  0b6517864e73e612  0c1d9da29b244954  0cb5bf6ded8443e2  0d51cccaba91a1d7  0d9d2b9512d2ac4e  0f3a14c41262517c  0f71bef6276ac653  0f75f8d891d3abf7  10a8cf0620cebfa5  12d8124bf0181211  14446d06fcd36725  14fdfb161f3cf4ab  174b6f6383def35d  17b11bbf4d889e68  1816361a4dc5c2c9  19f6487f16bb3ab6  1b01c9dcdf9288e0  1df2ad3ac6e8c8cc  1e1c2bdb87ba33ba  1f7a3910ab853c8c  1f844ef78835025d  210e828575e1bb70  218c1ffdf83d17f5  219495eea4c16086  21a4ec18e56f1daa  22336a2e24a58931  24426dd83f9cfb96  267e43fa7cd6d1bc  26cfb80df93d8e6f  2849c7a2f358c73a  29058d912e01b548  (+140 more)
.hypothesis/examples/f7447d63c4c0bf20/: 93cc890393b0cd5d
ascvd/: ascvd_calc.py  heart_failure.py
example_notebooks/: Example Notebook.ipynb
example_notebooks/.hypothesis/examples/fb319841a9778421/: eb9d6f631f872296
pyprevent/: ascvd_calc.py  heart_failure.py
src/: ascvd.rs  covariates.rs  cvd.rs  heart_failure.rs  lib.rs  multipliers.rs  utils.rs
tests/: test_ascvd.py  test_cvd.py  test_heart_failure.py
